syntax="proto2";

option java_package = "com.a.eye.collector.protocol.proto";

message AckSpan{
    required string traceId = 1;
    optional string parentLevel = 2;
    required int32 levelId = 3;
    required int64 cost = 4;
    required int32 statusCode = 5;
    optional string exceptionStack = 6;

}

message RequestSpan {
    required string traceId = 1;
    optional string parentLevel = 2;
    required int32 levelId = 3;
    required string viewPointId = 4;
    required int64 startDate = 5;
    required string spanTypeDesc = 6;
    required string callType = 7;
    required uint32 spanType = 8;
    required string applicationId = 9;
    required string userId = 10;
}
